syntax = "proto3";

package file;

option go_package = "github.com/Hiddan13/file_grpc/api/proto/pb";

service FileService {
  // Загрузка файла по частям в хранилище
  rpc Upload(stream UploadRequest) returns (UploadResponse);
  // Скачивание файла из хранилища по частям
  rpc Download(DownloadRequest) returns (stream DownloadResponse);
  // Получить список файлов в хранилище
  rpc ListFiles(Empty) returns (ListFilesResponse);
}

message UploadRequest {
  string filename = 1;
  bytes chunk = 2;
}

message UploadResponse {
  string message = 1;
  int64 size = 2;
}

message DownloadRequest {
  string filename = 1;
}

message DownloadResponse {
  bytes chunk = 1;
}

message Empty {}

message FileInfo {
  string filename = 1;
  string created_at = 2;
  string updated_at = 3;
  int64 size = 4;
}

message ListFilesResponse {
  repeated FileInfo files = 1;
}